--- a/requirements.txt
+++ b/requirements.txt
@@ -29,5 +29,8 @@ ipywidgets>=8.0.0
 tqdm>=4.64.0
 scikit-learn>=1.3.0
 
+
+# OpenAI API
+openai>=1.0.0
 # Note: For Apple Silicon (M1/M2/M3/M4), install PyTorch with MPS support:
 # pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
