--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+# For loading environment variables from .env
+python-dotenv
 # Core ML libraries for MPS/Apple Silicon compatibility
 torch>=2.1.0
 transformers>=4.36.0
