--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,37 @@
-# Minimal requirements for search_final.py and finance_qa_streamlit.py
+# For loading environment variables from .env
 python-dotenv
-faiss-cpu
-nltk
-numpy
-openai
-rank-bm25
-requests
-sentence-transformers
+# Core ML libraries for MPS/Apple Silicon compatibility
+torch>=2.1.0
+transformers>=4.36.0
+datasets>=2.15.0
+tokenizers>=0.15.0
+
+# PEFT and training
+peft>=0.7.0
+accelerate>=0.25.0
+
+# RAG and Search dependencies
+sentence-transformers>=2.2.0
+faiss-cpu>=1.7.4
+rank-bm25>=0.2.2
+nltk>=3.8.0
+
+# Data handling
+pandas>=1.5.0
+numpy>=1.24.0
+
+# Quantization (optional - only for CUDA, not needed for MPS)
+bitsandbytes>=0.42.0  # Skip on MPS/Apple Silicon
+
+# Jupyter and development
+jupyter>=1.0.0
+ipywidgets>=8.0.0
+
+# Utilities
+tqdm>=4.64.0
+scikit-learn>=1.3.0
+
+openai>=1.0.0
 streamlit
 torch==2.8.0
-transformers
+huggingface_hub
